<resources>
    <string name="app_name">GoUM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="powered_by_dinkop">Powered by Dinkop</string>
    <string name="email_kominfo">Dinas Koperasi dan Usaha Mikro\nKabupaten Tangerang</string>
    <string name="braun_classic_watch">Braun Classic Watch</string>
    <string name="description">This Braun watch is a reissue of the original 1970\'s design from renowned design team Dietrich Lubs and Dieter Rams, both of whom have work featured in the Museum’s collection. The large watch features a numbered face, and the smaller watch has only index lines. Made of a matte stainless-steel case, black dial, mineral glass, a three-hand quartz movement, and a leather band. Water-resistant.</string>
    <string name="harga">Rp 160.000</string>
    <string name="memberprice">Rp 140.000 Harga Member</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi">Masukkan deskripsi sesuai dengan ketentuan produk anda</string>
    <string name="gambar_pesanan">Gambar Pesanan</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="sales_order">Data Penjualan</string>
    <string name="social">Sosial</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="masuk">MASUK</string>
    <string name="daftar">DAFTAR</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="password">Password</string>
    <string name="alamat">Alamat</string>
    <string name="email">Email</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="formulir_pendaftaran">Formulir Pendaftaran</string>
    <string name="lampiran_1">Pilih File</string>
    <string name="lampiran_2">Kirim</string>
    <string name="lampiran_3">lampiran 3</string>
    <string name="usaha_baru">USAHA BARU</string>
    <string name="masukkan_ke_keranjang">Masukkan ke keranjang</string>
    <string name="chat_dibalas">Chat Dibalas   98% (1jam)</string>
    <string name="transaksi_sukses">Transaksi Sukses   99%</string>
    <string name="pesan_dibalas">Pesan Dibalas   90% (1jam)</string>
    <string name="detail">Detail</string>
    <string name="chat_penjual">Chat Penjual</string>
    <string name="tigaraksa">Tigaraksa</string>
    <string name="gambar">gambar</string>
    <string name="_0">0</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="cetak">CETAK</string>
    <string name="logo_umkm">logo umkm</string>
    <string name="logo_tangerang">logo tangerang</string>
    <string name="toko_laris">Toko Laris</string>
    <string name="jumlah_produk">Jumlah Produk</string>
    <string name="_80">80</string>
    <string name="data_penjualan">Data Penjualan</string>
    <string name="email_penjual">kominfo@kabtangerang.go.id</string>
    <string name="strike"><strike>Rp200.000</strike></string>
    <string name="deskripsi_otp">Selesaikan registrasi anda dengan memasukkan kode verifikasi yang kami kirim ke:</string>
    <string name="nomor_otp">08128123456</string>
    <string name="verifikasi_OTP">KODE VERIFIKASI</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="act">Act</string>
    <string name="total_harga">Total Harga</string>
    <string name="deskripsi_toko">Toko ini hanya menjual produk produk yang terjamin 100% original, untuk informasi lebih lanjut silahkan hubungi kami langung</string>
    <string name="bagikan">Bagikan</string>
    <string name="lorem">orem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quia itaque officia qui, ratione voluptatibus ad aut, temporibus illo blanditiis quis. Id, laborum deleniti culpa officia, provident iste cum labore, officiis beatae laudantium voluptatum corrupti nihil quam asperiores quisquam aliquid eum omnis ea unde, itaque suscipit iusto.</string>
    <string name="image">image</string>
    <string name="upload_file">upload file</string>
    <string name="pilih_file">Pilih File</string>
    <string name="kirim">Kirim</string>
    <string name="img_27042019_jpg">img-27042019.jpg</string>
    <string name="tambah_file">tambah file</string>
    <string name="simpan">simpan</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_npwp">Nomor NPWP</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="selesai">SELESAI</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="edit_produkI">Edit Produk</string>
    <string name="total_pesanan_t_t">Total Pesanan  \t\t\t :</string>
    <string name="alamat_order">Alamat\t\t \t\t\t\t\t:</string>
    <string name="nama">Nama \t\t\t\t\t\t\t:</string>
    <string name="no_inv">No INV \t\t\t\t\t\t:</string>
    <string name="tanggal">Tanggal\t\t\t\t\t\t:</string>
    <string name="total">Total \t\t\t\t:</string>
    <string name="status">Status\t\t\t\t\t\t\t:</string>
    <string name="title_activity_login_pembeli">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password Transaksi</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="alamat_toko_user">Alamat Toko\t\t:</string>
    <string name="nama_toko_user">Nama Toko \t\t:</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="delete">Delete</string>
    <string name="tambah_catatan">Pemilik belum menambahkan catatan apapun</string>
</resources>
