<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_toko"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="Toko" />
        <item
            android:id="@+id/nav_akun"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="Akun" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_regist"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_keranjang"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="Keranjang" />

        <item
            android:id="@+id/nav_statistik"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="Statistik" />
        <item
            android:id="@+id/nav_sales_order"
            android:icon="@drawable/ic_sales"
            android:title="@string/sales_order" />

        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_discount"
            android:title="Promo" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/social" />
    </group>

</menu>
